# gh-proxy

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
app/: app.conf  main.py  uwsgi.ini
static/: index.html
