[project]
name = "gh-proxy"
version = "0.1.0"
description = "A high-performance proxy service for accelerating GitHub and other file downloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "uvicorn==0.27.1",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "requests==2.31.0",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
]
